# example-project

./: .gitignore  README.md  pyproject.toml
infra/: compose.yaml  dev.env
src/: Dockerfile  alembic.ini  main.py  pyproject.toml
src/_alembic/: env.py
src/_alembic/versions/: 20250513_2030fbc3fe48_add_user.py  20250513_2030fbc3fe48_users.py  20250521_128038723655_rides.py
src/auth/: __init__.py
src/auth/api/: auth_header.py
src/auth/presentation/functions/: authenticate_request.py
src/payments/: __init__.py  errors.py
src/payments/domain/: models.py
src/rides/: __init__.py  constants.py  errors.py
src/rides/application/queries/: complex_ride.py  filter_rides.py
src/rides/application/use_cases/: __init__.py  book_ride.py  cancel_ride.py  create_ride.py  filter_rides.py  get_complex_ride.py  leave_ride.py  update_ride.py
src/rides/domain/: models.py  params_spec.py  repositories.py  uow.py
src/rides/infrastructure/: uow.py
src/rides/infrastructure/queries/: cached_sqlaclhemy_complex_ride.py  sqlalchemy_filter_rides.py
src/rides/infrastructure/repositories/: city_fake.py  ride_sqlalchemy.py
src/rides/presentation/rest/: routes.py  schemas.py
src/shared/: errors.py
src/shared/api/: idempotency_header.py
src/shared/application/: cache.py
src/shared/domain/: models.py
src/shared/infrastructure/: config.py  logging.py  redis.py  redis_cache.py  sqlalchemy.py
src/shared/presentation/: idempotency_header.py
src/users/: __init__.py  errors.py
src/users/application/protocols/: email_confirmation_code_service.py  mail_service.py
src/users/application/use_cases/: __init__.py  confirm_email.py  create_user.py  get_user.py  send_email_confirmation_code_via_mail.py  update_user.py
src/users/domain/: models.py  params_spec.py  repositories.py  uow.py
src/users/infrastructure/: mail_service.py  redis_stored_email_confirmation_code_service.py  uow.py
src/users/infrastructure/queries/: get_users_data.py
src/users/infrastructure/repositories/: redis_cached_sqlalchemy.py  sqlalchemy.py
src/users/presentation/functions/: get_users_data.py
src/users/presentation/rest/: routes.py  schemas.py
