[project]
name = "example-project"
version = "0.1.0"
description = "A BlaBlaCar-like project with modular monolithic and onion architectures"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "alembic==1.15.*",
    "fastapi==0.115.*",
    "granian==2.2.*",
    "orjson==3.10.*",
    "psycopg[binary]==3.2.*",
    "pydantic[email]==2.11.*",
    "pydantic-settings==2.9.*",
    "redis[hiredis]==5.3.*",
    "sqlalchemy[asyncio]==2.0.*",
    "dacite==1.9.*",
]

[dependency-groups]
dev = [
    "mypy==1.15.*",
    "ruff==0.11.*",
]


[tool.mypy]
exclude = ['^_alembic/']
explicit_package_bases = 1
plugins = ['pydantic.mypy']
python_version = '3.13'

strict = true
disallow_incomplete_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true


[tool.ruff]
extend-exclude = ['_alembic']
fix = true
line-length = 120
show-fixes = true
target-version = 'py313'


[tool.ruff.format]
docstring-code-line-length = 88
quote-style = 'single'


[tool.ruff.lint]
ignore = [
    'ARG', 'A001', 'A002', 'COM812', 'CPY001', 'D100', 'D104', 'D105', 'D106', 'D107', 'D203', 'D205', 'D213', 'D400',
    'D406', 'D407', 'D413', 'D415', 'E712', 'FURB140', 'PLC0414', 'PLR0913', 'RUF010', 'TC003', 'TD003', 'TID252',
]
select = ['ALL']


[tool.ruff.lint.flake8-annotations]
ignore-fully-untyped = true


[tool.ruff.lint.flake8-quotes]
inline-quotes = 'single'


[tool.ruff.lint.isort]
section-order = ['future', 'standard-library', 'third-party', 'first-party', 'local-folder']


[tool.ruff.lint.pycodestyle]
max-doc-length = 88
